remove bugs + css scrollbar webkit

--- a/src/less/wysihtml5-styled-core.less
+++ b/src/less/wysihtml5-styled-core.less
@@ -196,6 +196,22 @@ textarea.wysihtml5-textarea {
   }
 }
 
+.custom_scrollbar::-webkit-scrollbar-track {
+	background-color: rgba(113,112,107,0.1);
+	-webkit-border-radius: 1px;
+}
+
+.custom_scrollbar::-webkit-scrollbar-thumb:horizontal,
+.custom_scrollbar::-webkit-scrollbar-thumb:vertical {
+	background-color: rgba(0,0,0,.1);
+	-webkit-border-radius: 2px;
+}
+
+.custom_scrollbar::-webkit-scrollbar-thumb:vertical:hover,
+.custom_scrollbar::-webkit-scrollbar-thumb:horizontal:hover {
+	background: rgba(0,0,0,.3);
+}
+
 
 :-webkit-full-screen {
 	background-color: #eeeeee;
